--- a/index.html
+++ b/index.html
@@ -237,28 +237,28 @@
 
             <div class="mobile work__container bd-grid">
                 <div class="work__img work__image">
-                    <img src="assets/img/work1.jpg" alt="">
+                    <a href="https://jiaqicoder.com/fireblogs"><img src="assets/img/work1.jpg" alt=""></a>
                 </div>
                 <div class="work__img work__image">
-                    <img src="assets/img/work2.jpg" alt="">
+                    <a href="https://jiaqicoder.com/VueShop"><img src="assets/img/work2.jpg" alt=""></a>
                 </div>
                 <div class="work__img work__image">
-                    <img src="assets/img/work3.jpg" alt="">
+                    <a href="https://jiaqicoder.com/travel-site/"><img src="assets/img/work3.jpg" alt=""></a>
                 </div>
             </div>
             <div class="pc  wrapper">
                 <ul class="carousel_list">
                     <li class="work__image">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <a href="https://jiaqicoder.com/fireblogs"><img src="assets/img/work1.jpg" alt=""></a>
                     </li>
                     <li class="work__image">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <a href="https://jiaqicoder.com/VueShop"><img src="assets/img/work2.jpg" alt=""></a>
                     </li>
                     <li class="work__image">
-                        <img src="assets/img/work3.jpg" alt="">
+                        <a href="https://jiaqicoder.com/travel-site/"><img src="assets/img/work3.jpg" alt=""></a>
                     </li>
                     <li class="work__image">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <a href="https://jiaqicoder.com/fireblogs"><img src="assets/img/work1.jpg" alt=""></a>
                     </li>
                 </ul>
                 <div class="button_wrap">
