--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/css/styles.css">
-
+    <link rel="icon" href="/favicon.jpg" type="image/x-icon" />
     <!-- =====BOX ICONS===== -->
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.15.3/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_2791089_jipt64000yc.css">
@@ -237,28 +237,28 @@
 
             <div class="mobile work__container bd-grid">
                 <div class="work__img work__image">
-                    <a href="https://jiaqicoder.com/fireblogs"><img src="assets/img/work1.jpg" alt=""></a>
+                    <a href="https://jiaqicoder.com/fireblogs" target="_blank"><img src="assets/img/work1.jpg" alt=""></a>
                 </div>
                 <div class="work__img work__image">
-                    <a href="https://jiaqicoder.com/VueShop"><img src="assets/img/work2.jpg" alt=""></a>
+                    <a href="https://jiaqicoder.com/VueShop" target="_blank"><img src="assets/img/work2.jpg" alt=""></a>
                 </div>
                 <div class="work__img work__image">
-                    <a href="https://jiaqicoder.com/travel-site/"><img src="assets/img/work3.jpg" alt=""></a>
+                    <a href="https://jiaqicoder.com/travel-site/" target="_blank"><img src="assets/img/work3.jpg" alt=""></a>
                 </div>
             </div>
             <div class="pc  wrapper">
                 <ul class="carousel_list">
                     <li class="work__image">
-                        <a href="https://jiaqicoder.com/fireblogs"><img src="assets/img/work1.jpg" alt=""></a>
+                        <a href="https://jiaqicoder.com/fireblogs" target="_blank"><img src="assets/img/work1.jpg" alt=""></a>
                     </li>
                     <li class="work__image">
-                        <a href="https://jiaqicoder.com/VueShop"><img src="assets/img/work2.jpg" alt=""></a>
+                        <a href="https://jiaqicoder.com/VueShop" target="_blank"><img src="assets/img/work2.jpg" alt=""></a>
                     </li>
                     <li class="work__image">
-                        <a href="https://jiaqicoder.com/travel-site/"><img src="assets/img/work3.jpg" alt=""></a>
+                        <a href="https://jiaqicoder.com/travel-site/" target="_blank"><img src="assets/img/work3.jpg" alt=""></a>
                     </li>
                     <li class="work__image">
-                        <a href="https://jiaqicoder.com/fireblogs"><img src="assets/img/work1.jpg" alt=""></a>
+                        <a href="https://jiaqicoder.com/fireblogs" target="_blank"><img src="assets/img/work1.jpg" alt=""></a>
                     </li>
                 </ul>
                 <div class="button_wrap">
