--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="home__data">
                 <h1 class="home__title">Hi,<br>我是 <span class="home__title-color">嘉琪</span><br> Web developer</h1>
 
-                <a href="tel:2473487465@qq.com" class="button">联系我</a> 
+                <a href="tel:18975664428" class="button">联系我</a> 
 
 
             </div>
