--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                 <div>
                     <h2 class="about__subtitle">我是刘嘉琪</h2>
-                    <p class="about__text">毕业于湖南农业大学材料化学专业，之后自学前端。</p>
+                    <p class="about__text">2021年毕业于湖南农业大学材料化学专业，大四下学期开始自学前端。</p>
                 </div>
             </div>
         </section>
@@ -233,7 +233,7 @@
 
         <!--===== WORK =====-->
         <section class="work section" id="work">
-            <h2 class="section-title">Work</h2>
+            <h2 class="section-title">作品</h2>
 
             <div class="mobile work__container bd-grid">
                 <div class="work__img work__image">
